# flaskGPT

./: README.md  app.py  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
static/src/css/: input.css
templates/: index.html
